Fix main nav list alignment
Adjusted it to show only icons up to 720px, as it stays on the bottom also on medium screens, giving more space to main content.

--- a/src/styles/scss/layout/_navigation.scss
+++ b/src/styles/scss/layout/_navigation.scss
@@ -120,15 +120,12 @@
 }
 
 .nav-link-text {
-	@include mq(small) {
-		padding: var(--size-3) var(--size-3) var(--size-1);
-	}
-}
+	/* Hide on small screen. Svg <title> will add the accessible name*/
+	display: none;
 
-/* Hide on small screen. Svg <title> will add the accessible name*/
-@media (width <= 480px) {
-	.nav-link-text {
-		display: none;
+	@include mq(medium) {
+		padding: var(--size-3) var(--size-3) var(--size-1);
+		display: unset;
 	}
 }
 
@@ -267,6 +264,13 @@
 
 ::backdrop {
 	backdrop-filter: blur(2px);
+}
+
+@media screen and (30em <= width < 45em) {
+	[popover],
+	.primary-navigation .nav-list {
+		flex-direction: row;
+	}
 }
 
 /* Navigation end*/
