--- a/src/styles/scss/layout/_sidebar.scss
+++ b/src/styles/scss/layout/_sidebar.scss
@@ -4,7 +4,7 @@
 aside {
 	background-color: var(--clr-dark);
 	color: var(--clr-light);
-	padding-block-end: var(--size-6);
+	padding-block: var(--size-4);
 
 	display: flex;
 	flex-direction: column;
